Quorum/Library/Tests/Expressions/Pass/LTIntInt.quorum
class Main
    action Main
        boolean b = 2 < 1
        output b
        output 1 < 2
    end
end