Quorum/Library/Tests/Expressions/Fail/DuplicateVariableDefinition.quorum
class Main
    action Main
        integer i = 1
        repeat while i < 1
            integer i = 2
        end
    end
end